enum fstype {
	UNSUPPORTED		= 0;
	PROC			= 1;
	SYSFS			= 2;
	DEVTMPFS		= 3;
	BINFMT_MISC		= 4;
	TMPFS			= 5;
	DEVPTS			= 6;
	SIMFS			= 7;
	PSTORE			= 8;
	SECURITYFS		= 9;
	FUSECTL			= 10;
	DEBUGFS			= 11;
};

message mnt_entry {
	required uint32		fstype			= 1;
	required uint32		mnt_id			= 2;
	required uint32		root_dev		= 3;
	required uint32		parent_mnt_id		= 4;
	required uint32		flags			= 5;

	required string		root			= 6;
	required string		mountpoint		= 7;
	required string		source			= 8;
	required string		options			= 9;

	optional uint32		shared_id		= 10;
	optional uint32		master_id		= 11;

	optional bool		with_plugin		= 12;
}
